--- a/railway.toml
+++ b/railway.toml
@@ -1,12 +1,6 @@
-[deploy]
-healthcheckPath = "/api/_health/"
-healthcheckTimeout = 300
-restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 10
-
 [services.baserow-app]
-source = "DockerImage"
-dockerImage = "baserow/baserow:2.0.3"
+[services.baserow-app.build]
+builder = "DOCKERFILE"
 [services.baserow-app.env]
 BASEROW_PUBLIC_URL = "${{RAILWAY_PUBLIC_DOMAIN}}"
 SECRET_KEY = "${{secret(64)}}"
