Fix Railway port routing for Baserow web frontend
- Updated Dockerfile to expose port 3000 (Baserow web frontend)
- Added explicit CMD to start Baserow services
- Updated healthcheck to use port 3000
- Added restart policy to railway.toml for reliability

--- a/railway.toml
+++ b/railway.toml
@@ -1,6 +1,10 @@
 [services.baserow-app]
 [services.baserow-app.build]
 builder = "DOCKERFILE"
+[services.baserow-app.deploy]
+healthcheckPath = "/api/_health/"
+healthcheckTimeout = 300
+restartPolicyType = "ALWAYS"
 [services.baserow-app.env]
 BASEROW_PUBLIC_URL = "${{RAILWAY_PUBLIC_DOMAIN}}"
 SECRET_KEY = "${{secret(64)}}"
