--- a/railway.toml
+++ b/railway.toml
@@ -1,15 +1,19 @@
 [services.baserow-app]
-[services.baserow-app.build]
-builder = "DOCKERFILE"
+source = "DockerImage"
+dockerImage = "baserow/baserow:2.0.3"
 [services.baserow-app.deploy]
+restartPolicyType = "ON_FAILURE"
+restartPolicyMaxRetries = 10
 healthcheckPath = "/api/_health/"
-healthcheckTimeout = 300
-restartPolicyType = "ALWAYS"
+healthcheckTimeout = 100
+[services.baserow-app.ports]
+port = 80
+type = "HTTP"
 [services.baserow-app.env]
 BASEROW_PUBLIC_URL = "${{RAILWAY_PUBLIC_DOMAIN}}"
 SECRET_KEY = "${{secret(64)}}"
 DATABASE_URL = "${{services.postgres.DATABASE_URL}}"
-REDIS_URL = "${{services.redis.REDIS_URL}}"
+REDIS_URL = "redis://:${{services.redis.PASSWORD}}@${{services.redis.RAILWAY_PRIVATE_DOMAIN}}:6379/0"
 DISABLE_VOLUME_CHECK = "yes"
 
 [services.postgres]
